# AI-Complaint-Analyzer-and-Smart-Routing-System

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.py  generate_dataset.py  prepare_models.py  preprocess.py  pyproject.toml  requirements.txt  test_api.py  train_model.py  vercel.json
api/: app.py  category_encoder.pkl  category_model.pkl  preprocessor.pkl  priority_model.pkl  vectorizer.pkl
templates/: index.html  index_production.html
