[project]
name = "ai-complaint-analyzer"
version = "0.1.0"
description = "AI Complaint Analyzer and Smart Routing System"
dependencies = [
    "flask==2.3.3",
    "scikit-learn==1.3.2",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "nltk==3.8.1",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
